# bitcoin-project

./: CMakeLists.txt  README.md
include/: bitcoin.h  curlhandle.h
src/: bitcoin.cpp  curlhandle.cpp  main.cpp
